# USA-House-Prices

./: README.md  feature_selection.ipynb  pyproject.toml
data/: data_eda.csv  data_new.csv
notebooks/: USA Housing EDA.ipynb  feature_selection.ipynb  linear_regression_model.ipynb
