[tool.poetry]
name = "usa-house-prices"
version = "0.1.0"
description = "USA Housing Prices EDA and Linear Regression Techniques"
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"
packages = [{include = "usa_house_prices"}]

[tool.poetry.dependencies]
python = "^3.10"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

