[tool.poetry]
name = "usa-house-prices"
version = "0.1.0"
description = "USA Housing Prices EDA and Linear Regression Techniques"
authors = ["Ryan Slipe <rslipe@my.gcu.edu>"]
readme = "README.md"
packages = [{include = "usa_house_prices"}]

[tool.poetry.dependencies]
python = "^3.10"
jupyter = "^1.1.1"
pandas = "^2.2.3"
numpy = "^2.2.2"
seaborn = "^0.13.2"
matplotlib = "^3.10.0"
plotly = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

